[project]
name = "nba-deepfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "asttokens==3.0.1",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cramjam==2.11.0",
    "cycler==0.12.1",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "executing==2.2.1",
    "filelock==3.20.0",
    "fonttools==4.61.1",
    "fsspec==2025.12.0",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==9.9.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kagglehub==0.4.0",
    "kagglesdk==0.1.14",
    "kiwisolver==1.4.9",
    "markupsafe==2.1.5",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "nba-api==1.11.3",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numpy==2.4.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pbpstats==1.3.11",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "platformdirs==4.5.1",
    "polars>=1.38.1",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.4",
    "psutil==7.2.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pydantic>=2.12.5",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-snappy==0.7.3",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "setuptools==70.2.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "wcwidth==0.2.14",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
